# acrophobia-judge-system

./: .gitignore  Get_Value_and_Graph.py  Get_Value_and_Graph.spec  LSTM_for_pNN50.py  README.txt  TensorFlow.py
.tmp.drivedownload/: 1001558.driveupload  1001894.driveupload  1007311.driveupload  1008623.driveupload  1009072.driveupload  1009643.driveupload  1011602.driveupload  1012082.driveupload  1013973.driveupload  1015335.driveupload  1015394.driveupload  1017287.driveupload  1018197.driveupload  1019330.driveupload  1028103.driveupload  1029714.driveupload  1030145.driveupload  1034694.driveupload  1035168.driveupload  1035884.driveupload  1036327.driveupload  1040236.driveupload  1042323.driveupload  1044729.driveupload  1045279.driveupload  1045432.driveupload  1046905.driveupload  1051534.driveupload  1052471.driveupload  1053045.driveupload  1054691.driveupload  1057851.driveupload  1061896.driveupload  1064156.driveupload  1064775.driveupload  1065817.driveupload  1067189.driveupload  1068841.driveupload  1069807.driveupload  1072555.driveupload  (+5344 more)
Arduino/: Get-ECG.py  Get-ECG.py.rej  Get-ECG.spec  Get-EFG.py  Get_ECG.py  Get_ECG_re.py
MindWaveMobile2/: CMakeLists.txt  Get-EEG.py  Get_EEG.py  Get_EEG.spec  thinkgear.py
MindWaveMobile2/Windows-Developer-Tools-3.2/Windows Developer Tools 3.2/EEG_Algo_SDK_Windows/Algo SDK Sample/Algo SDK Sample/: Algo SDK Sample.cpp  Algo SDK Sample.vcxproj  Get-EEG-C++.cpp
MindWaveMobile2/Windows-Developer-Tools-3.2/Windows Developer Tools 3.2/EEG_Algo_SDK_Windows/Algo SDK Sample/Algo SDK Sample/Release/: Algo SDK Sample.vcxprojAssemblyReference.cache
MindWaveMobile2/Windows-Developer-Tools-3.2/Windows Developer Tools 3.2/EEG_Algo_SDK_Windows/Algo SDK Sample/Algo SDK Sample/Release/Algo SDK Sample.tlog/: Algo SDK Sample.lastbuildstate  Algo SDK Sample.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
MindWaveMobile2/Windows-Developer-Tools-3.2/Windows Developer Tools 3.2/EEG_Algo_SDK_Windows/Algo SDK Sample/Release/: Algo SDK Sample.iobj  Algo SDK Sample.ipdb
MindWaveMobile2/Windows-Developer-Tools-3.2/__MACOSX/Windows Developer Tools 3.2/Stream SDK for PC/Sample Project/win32/thinkgear_testapp/thinkgear_testapp/Debug/: ._link.15860-rc.write.1.tlog
MindWaveMobile2/python-mindwave-master/: README  parser.py
Test/: keras_test.ipynb  keras_test.py
acrophobia_judge_system/: manage.py
python-fitbit/: 2018-06-01.txt  2018-06-02.txt  2018-06-03.txt  2018-06-04.txt  2018-06-05.txt  2018-06-06.txt  2018-06-07.txt  2018-06-08.txt  2018-06-09.txt  2018-06-10.txt  2018-06-11.txt  2018-06-12.txt  2018-06-14.txt  2018-06-15.txt  2018-06-16.txt  2018-06-17.txt  2018-06-18.txt  2018-06-19.txt  2018-06-20.txt  2018-06-21.txt  2018-06-22.txt  2018-06-23.txt  2018-06-24.txt  2018-06-25.txt  2018-06-26.txt  2018-06-27.txt  2018-06-28.txt  2018-06-29.txt  2018-06-30.txt  2018-07-24.txt  2018-07-25.txt  2018-07-26.txt  2018-07-27.txt  2018-07-28.txt  2018-07-29.txt  2018-07-30  2018-07-30.txt  2018-11-07.txt  TensorFlow.py  Text_to_graph.py  (+7 more)
データ/: heart_info.csv  vital_info.csv  まさし2019-12-11-17_31vital_info.csv  まさし2019-12-11-17_42vital_info.csv  北之園2019-12-10-1358vital_info.csv  北之園2019-12-10-1359vital_info.csv  北之園2019-12-10-1400vital_info.csv  北之園2019-12-10-1401vital_info.csv  北之園2019-12-10-1402vital_info.csv  北之園2019-12-10-1403vital_info.csv  北之園2019-12-10-1404vital_info.csv  北之園2019-12-10-1405vital_info.csv  北之園2019-12-10-1406vital_info.csv  北之園2019-12-10-1407vital_info.csv  北之園2019-12-10-1408vital_info.csv  北之園2019-12-10-1409vital_info.csv  北之園2019-12-10-1410vital_info.csv  北之園2019-12-10-1411vital_info.csv  北之園2019-12-10-1412vital_info.csv  北之園2019-12-10-1413vital_info.csv  北之園2019-12-10-1414vital_info.csv  北之園2019-12-10-1415vital_info.csv  北之園2019-12-10-1416vital_info.csv  北之園2019-12-10-1417vital_info.csv  北之園2019-12-10-1418vital_info.csv  北之園2019-12-10-1419vital_info.csv  北之園2019-12-10-1420vital_info.csv  北之園2019-12-10-1421vital_info.csv  北之園2019-12-10-1422vital_info.csv  北之園2019-12-10-1423vital_info.csv  (+26 more)
(+12 files in other folders)
